--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>長城2048</title>
-
   <link href="style/main.css" rel="stylesheet" type="text/css">
+  <link href="style/likes.css" rel="stylesheet" type="text/css">
   <link href="style/about.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
@@ -12,12 +12,51 @@
   <link rel="apple-touch-startup-image" href="meta/apple-touch-startup-image-640x920.png"  media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)"> <!-- iPhone, retina -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
+  <script src="js/jquery.js"></script>
+  <script src="js/social-likes.min.js"></script>  
+  <script src="js/soundjs-0.5.2.min.js"></script>
+  <script src="js/jquery.titlesequence.js"></script>
+  <script src="js/bind_polyfill.js"></script>
+  <script src="js/classlist_polyfill.js"></script>
+  <script src="js/animframe_polyfill.js"></script>
+  <script src="js/keyboard_input_manager.js"></script>
+  <script src="js/html_actuator.js"></script>
+  <script src="js/grid.js"></script>
+  <script src="js/tile.js"></script>
+  <script src="js/local_storage_manager.js"></script>
+  <script src="js/game_manager.js"></script>
+  <script src="js/application.js"></script>
+
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '274569989390321',
+        xfbml      : true,
+        version    : 'v2.0'
+      });
+    };
+
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/all.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script>
+
+<div
+  class="fb-like"
+  data-send="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
+
   <div class="container">
     <div class="heading">
       <h1 class="title" style="font-size:55px">長城<sub>2048</sub></h1>
@@ -30,6 +69,12 @@
     <div class="above-game">
       <a class="info-button">Game Info</a>
       <a class="restart-button">New Game</a>
+      <div class="social-likes social-likes_single" data-url="http://johnlimlc.github.io/CC-2048/" data-title="長城2048" data-single-title="Share">
+        <div class="facebook" title="Share link on Facebook">Facebook</div>
+        <div class="twitter" title="Share link on Twitter">Twitter</div>
+        <div class="plusone" title="Share link on Google+">Google+</div>
+      </div>
+      <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
     </div>
 
     <div class="game-container">
@@ -76,24 +121,8 @@
       <div class="encourage-message">
         <p></p>
       </div>
-
     </div>
-
   </div>
-
-  <script src="js/soundjs-0.5.2.min.js"></script>
-  <script src="js/jquery.js"></script>
-  <script src="js/jquery.titlesequence.js"></script>
   <script src="js/about.js"></script>
-  <script src="js/bind_polyfill.js"></script>
-  <script src="js/classlist_polyfill.js"></script>
-  <script src="js/animframe_polyfill.js"></script>
-  <script src="js/keyboard_input_manager.js"></script>
-  <script src="js/html_actuator.js"></script>
-  <script src="js/grid.js"></script>
-  <script src="js/tile.js"></script>
-  <script src="js/local_storage_manager.js"></script>
-  <script src="js/game_manager.js"></script>
-  <script src="js/application.js"></script>
 </body>
 </html>
