--- a/index.html
+++ b/index.html
@@ -50,16 +50,9 @@
      }(document, 'script', 'facebook-jssdk'));
   </script>
 
-<div
-  class="fb-like"
-  data-send="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
-
   <div class="container">
     <div class="heading">
-      <h1 class="title" style="font-size:55px">長城<sub>2048</sub></h1>
+      <h1 class="title">長城<sub>2048</sub></h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -69,12 +62,22 @@
     <div class="above-game">
       <a class="info-button">Game Info</a>
       <a class="restart-button">New Game</a>
-      <div class="social-likes social-likes_single" data-url="http://johnlimlc.github.io/CC-2048/" data-title="長城2048" data-single-title="Share">
-        <div class="facebook" title="Share link on Facebook">Facebook</div>
-        <div class="twitter" title="Share link on Twitter">Twitter</div>
-        <div class="plusone" title="Share link on Google+">Google+</div>
+      <div class="donate-button">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="6WT7HDZYJQETN">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+        </form>
       </div>
-      <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+      <div class="share-button">
+        <div class="social-likes social-likes_single" data-url="http://johnlimlc.github.io/CC-2048/" data-title="長城2048" data-single-title="Share">
+          <div class="facebook" title="Share link on Facebook">Facebook</div>
+          <div class="twitter" title="Share link on Twitter">Twitter</div>
+          <div class="plusone" title="Share link on Google+">Google+</div>
+        </div>
+        <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+      </div>
     </div>
 
     <div class="game-container">
