--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
     </div>
 
     <div class="above-game">
+      <a class="info-button">Game Info</a>
+      <a class="restart-button">New Game</a>
+      <a class="like-button">
+        <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+      </a>
       <a class="share-button">
         <div class="social-likes social-likes_single" data-url="http://johnlimlc.github.io/CC-2048/" data-title="長城2048" data-single-title="Share">
           <div class="facebook" title="Share link on Facebook">Facebook</div>
           <div class="twitter" title="Share link on Twitter">Twitter</div>
           <div class="plusone" title="Share link on Google+">Google+</div>
         </div>
-      </a>
-      <a class="info-button">Game Info</a>
-      <a class="restart-button">New Game</a>
-      <a class="like-button">
-        <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="false"></div>
       </a>
     </div>
 
