--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
 
     <div class="above-game">
-      <a class="info-button">Game Info</a>
-      <a class="restart-button">New Game</a>
+      <a class="info-button">Info</a>
+      <a class="restart-button">New</a>
       <a class="like-button">
         <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
       </a>
