--- a/index.html
+++ b/index.html
@@ -60,17 +60,25 @@
     </div>
 
     <div class="above-game">
-      <a class="info-button">Info</a>
-      <a class="restart-button">New</a>
-      <a class="like-button">
-        <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+      <a class="donate-button">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="6WT7HDZYJQETN">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online." width="45px" height="25px">
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+        </form>
       </a>
+      <a class="info-button">Info</a>
       <a class="share-button">
         <div class="social-likes social-likes_single" data-url="http://johnlimlc.github.io/CC-2048/" data-title="長城2048" data-single-title="Share">
           <div class="facebook" title="Share link on Facebook">Facebook</div>
           <div class="twitter" title="Share link on Twitter">Twitter</div>
           <div class="plusone" title="Share link on Google+">Google+</div>
         </div>
+      </a>
+      <a class="restart-button">New</a>
+      <a class="like-button">
+        <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
       </a>
     </div>
 
