--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>長城2048</title>
+  <title>SG50-2048</title>
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link href="style/likes.css" rel="stylesheet" type="text/css">
   <link href="style/about.css" rel="stylesheet" type="text/css">
@@ -52,7 +52,7 @@
 
   <div class="container">
     <div class="heading">
-      <h1 class="title">長城<sub>2048</sub></h1>
+      <h1 class="title">SG50<sub>2048</sub></h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -61,12 +61,12 @@
 
     <div class="above-game">
       <a class="like-button">
-        <div class="fb-like" data-href="http://johnlimlc.github.io/CC-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+        <div class="fb-like" data-href="http://johnlimlc.github.io/SG50-2048/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
       </a>
       <a class="info-button"></a>
       <a class="restart-button"></a>
       <a class="share-button">
-        <div class="social-likes social-likes_single" data-url="http://johnlimlc.github.io/CC-2048/" data-title="長城2048" data-single-title="Share">
+        <div class="social-likes social-likes_single" data-url="http://johnlimlc.github.io/SG50-2048/" data-title="SG50-2048" data-single-title="Share">
           <div class="facebook" title="Share link on Facebook">Facebook</div>
           <div class="twitter" title="Share link on Twitter">Twitter</div>
           <div class="plusone" title="Share link on Google+">Google+</div>
